syntax = "proto3";

message KeepAliveMessage {

}
